#208 reformat code according to sonarlint issues highlighted